--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,3 +2,10 @@
 @import "global.less";
 @import "mixins.less";
 @import "variables.less";
+@import "blocks/page-header.less";
+@import "blocks/main-navigation.less";
+@import "blocks/stats.less";
+@import "blocks/advantages.less";
+@import "blocks/news.less";
+@import "blocks/reviews.less";
+@import "blocks/page-footer.less";
