--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,3 +8,6 @@
 @import "blocks/news.less";
 @import "blocks/reviews.less";
 @import "blocks/page-footer.less";
+@import "blocks/works.less";
+@import "blocks/price-list.less";
+@import "blocks/record.less";
