добавил типографику для планшета и десктопа

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,7 +1,9 @@
+.advantages {
+  background-color: @dark-grey;
+}
+
 .advantages__list {
   .reset-list();
-
-  background-color: @dark-grey;
 }
 
 .advantages__name {
@@ -16,4 +18,10 @@
 
   font-size: 20px;
   color: @white;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages {
+    background-color: #353535;
+  }
 }
