--- a/source/less/blocks/news.less
+++ b/source/less/blocks/news.less
@@ -27,3 +27,9 @@
   text-decoration: none;
   text-transform: uppercase;
 }
+
+@media (min-width: @tablet-width) {
+  .news__headline {
+    .set-font(bold, 40px, 45px);
+  }
+}
