--- a/source/less/blocks/price-list.less
+++ b/source/less/blocks/price-list.less
@@ -21,3 +21,9 @@
 .price-list__discount-time {
   margin: 0;
 }
+
+@media (min-width: @tablet-width) {
+  .price-list__headline {
+    .set-font(bold, 40px, 45px);
+  }
+}
