--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -35,3 +35,9 @@
 
   text-transform: uppercase;
 }
+
+@media (min-width: @tablet-width) {
+  .works__headline {
+    .set-font(bold, 40px, 45px);
+  }
+}
