--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,6 +14,10 @@
   text-transform: uppercase;
 }
 
+.page-footer__social-title {
+  display: none;
+}
+
 .social__list {
   .reset-list();
 }
@@ -23,4 +27,16 @@
 
   text-decoration: none;
   text-transform: uppercase;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__phone {
+    font-weight: normal;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__social-title {
+    display: block;
+  }
 }
