--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -6,6 +6,10 @@
   text-transform: uppercase;
 }
 
+.reviews-comment__toggle {
+  display: none;
+}
+
 .slider__item {
   margin: 0;
 }
@@ -24,4 +28,18 @@
 
 .reviews__toggles {
   margin: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .reviews__headline {
+    .set-font(bold, 40px, 45px);
+  }
+
+  .reviews-comment__toggle {
+    .set-font(bold, 18px, 24px);
+    color: @black;
+
+    text-decoration: none;
+    text-transform: uppercase;
+  }
 }
