--- a/source/less/blocks/price-list.less
+++ b/source/less/blocks/price-list.less
@@ -12,10 +12,18 @@
 }
 
 .price-list__haircut,
-.price-list__option,
-.price-list__cost,
+.price-list__number,
+.price-list__add-services,
 .price-list__discount-time {
   font-size: 20px;
+}
+
+.price-list__number {
+  opacity: 0.3;
+}
+
+.price-list__haircut {
+  font-weight: bold;
 }
 
 .price-list__discount-time {
