добавил scaffolding.less

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,4 @@
-@import "fonts.less";
-@import "global.less";
+@import "scaffolding.less";
 @import "mixins.less";
 @import "variables.less";
 @import "blocks/page-header.less";
