--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -2,4 +2,12 @@
   text-align: center;
 
   border: 1px solid #e5ddd5;
+
+  &:hover {
+    border-color: #d5c9bd;
+  }
+
+  &:active {
+    background-color: #d5c9bd;
+  }
 }
