блок преимуществ готов ✅

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -166,6 +166,11 @@
     text-align: center;
 
     border-bottom: none;
+    border-right: 1px solid #4a4a4a;
+
+    &:last-child {
+      border-right: none;
+    }
 
     &::before {
       top: 0;
