блок новостей готов ✅

--- a/source/less/blocks/news.less
+++ b/source/less/blocks/news.less
@@ -108,14 +108,6 @@
 
   text-decoration: none;
   text-transform: uppercase;
-
-  &:hover {
-    border-color: #d5c9bd;
-  }
-
-  &:active {
-    background-color: #d5c9bd;
-  }
 }
 
 @media (min-width: @tablet-width) {
@@ -155,6 +147,7 @@
     right: 0;
 
     width: 160px;
+    margin: 0;
   }
 }
 
