--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -1,13 +1,43 @@
 .works {
+  position: relative;
+
+  padding-bottom: 34px;
+
   background-color: @white;
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    height: 34px;
+
+    background: url(../img/corner-double-dark-light.svg) no-repeat;
+  }
+}
+
+.works__wrapper {
+  position: relative;
+
+  padding: 0 20px;
+  padding-top: 30px;
+  padding-bottom: 34px;
 }
 
 .works__headline {
   margin: 0;
+  margin-bottom: 25px;
 
   .set-font(bold, 30px, 30px);
-
+  text-align: center;
   text-transform: uppercase;
+}
+
+.works-to-main__toggle {
+  display: none;
 }
 
 .works__list {
@@ -16,28 +46,275 @@
   list-style: none;
 }
 
-.works__name {
+.works-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.works-item__img-wrraper {
+  height: 176px;
+
+  line-height: 0;
+  text-align: center;
+
+  background-color: #e6ded6;
+}
+
+.works-item--work-of-month .works-item__img-wrraper {
+  position: relative;
+
+  height: 480px;
+
+  &::before {
+    content: "Работа месяца";
+
+    position: absolute;
+    left: 0;
+    bottom: 30px;
+
+    padding: 11px 0;
+    padding-left: 25px;
+    padding-right: 17px;
+
+    font-size: 20px;
+    line-height: 27px;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: uppercase;
+
+    background-color: #826550;
+  }
+}
+
+.works-item__review {
+  padding: 20px;
+  padding-bottom: 10px;
+
+  border: 1px solid #e5ddd5;
+  border-top: none;
+}
+
+.works-item__name {
+  display: block;
+  margin-bottom: 15px;
+
   font-size: 24px;
 }
 
-.works__text {
+.works-item__text {
   margin: 0;
+  margin-bottom: 22px;
 }
 
-.works__services {
+.works-item__services {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
   .reset-list();
 
   list-style: none;
 }
 
-.works__service {
+.works-item__service {
+  position: relative;
+
+  padding-left: 36px;
+  margin-right: 30px;
+  margin-bottom: 25px;
+
   font-size: 16px;
 
   text-transform: uppercase;
+
+  &--haircut::before,
+  &--shaving::before,
+  &--mustache::before {
+    content: "";
+
+    position: absolute;
+
+    transform: translateY(-50%);
+  }
+
+  &--haircut::before {
+    left: 0;
+    top: 47%;
+
+    width: 22px;
+    height: 20px;
+
+    background: url(../img/scissors-icon.svg) no-repeat center;
+  }
+
+  &--shaving::before {
+    left: 0;
+    top: 47%;
+
+    width: 23px;
+    height: 21px;
+
+    background: url(../img/beard-icon.svg) no-repeat center;
+  }
+
+  &--mustache::before {
+    left: -12px;
+    top: 47%;
+
+    width: 45px;
+    height: 12px;
+
+    background: url(../img/mustache-icon.svg) no-repeat center;
+  }
 }
 
 @media (min-width: @tablet-width) {
+  .works__wrapper {
+    position: relative;
+
+    width: 640px;
+    margin: 0 auto;
+    padding: 0;
+    padding-top: 55px;
+    padding-bottom: 60px;
+  }
+
   .works__headline {
+    margin-bottom: 40px;
+
     .set-font(bold, 40px, 45px);
+    text-align: left;
+  }
+
+  .works-to-main__toggle {
+    position: absolute;
+    top: 55px;
+    right: 0;
+
+    display: block;
+    width: 160px;
+    padding: 12px 0;
+
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: @black;
+  }
+
+  .works-item {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 40px;
+
+    &--work-of-month .works-item__img-wrraper {
+      height: auto;
+
+      &::before {
+        left: 0;
+        top: 35px;
+        bottom: auto;
+      }
+    }
+  }
+
+  .works-item__img-wrraper {
+    width: 270px;
+    height: auto;
+  }
+
+  .works-item__review {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 370px;
+    padding: 0 50px;
+    padding-top: 45px;
+    padding-bottom: 10px;
+
+    border-left: none;
+    border-top: 1px solid #e5ddd5;
+  }
+
+  .works-item__name {
+    margin-bottom: 25px;
+  }
+
+  .works-item__text {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .works {
+    padding-bottom: 0;
+
+    &::after {
+      display: none;
+    }
+  }
+
+  .works__wrapper {
+    width: 960px;
+    margin: 0 auto;
+  }
+
+  .works__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .works-item {
+    display: flex;
+
+    &:last-child {
+      margin-bottom: 40px;
+    }
+
+    &:not(:first-child) {
+      width: 294px;
+      flex-direction: column;
+    }
+
+    &--work-of-month {
+      flex-direction: row;
+
+      border-left: none;
+      border-top: 1px solid #e5ddd5;
+
+      & .works-item__img-wrraper {
+        width: 480px;
+      }
+    }
+  }
+
+  .works-item--work-of-month .works-item__review {
+    padding-top: 100px;
+  }
+
+  .works-item__img-wrraper {
+    width: auto;
+  }
+
+  .works-item__review {
+    width: auto;
+    box-sizing: border-box;
+    padding: 0 35px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    flex-grow: 1;
+
+    border-top: none;
+    border-left: 1px solid #e5ddd5;
+  }
+
+  .works-item__name,
+  .works-item__text {
+    margin-bottom: 30px;
   }
 }
