--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,3 +12,6 @@
 @import "blocks/record.less";
 @import "blocks/slider.less";
 @import "blocks/button.less";
+@import "blocks/modal-login.less";
+@import "blocks/modal-failure.less";
+@import "blocks/modal-success.less";
