--- a/source/less/blocks/record.less
+++ b/source/less/blocks/record.less
@@ -1,5 +1,22 @@
 .record {
+  position: relative;
+
+  padding-bottom: 34px;
+
   background-color: @white;
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    height: 34px;
+
+    background: url(../img/corner-double-dark.svg) no-repeat;
+  }
 }
 
 .record__wrapper {
@@ -165,6 +182,9 @@
   padding-left: 60px;
 
   line-height: 30px;
+}
+
+.checkbox {
 
   &::before {
     content: "";
@@ -200,14 +220,14 @@
   }
 }
 
-.record__add-service input[type="checkbox"]:checked + label::before {
+input[type="checkbox"]:checked + label::before {
   background-image: url(../img/tick.svg);
   background-repeat: no-repeat;
   background-size: 22px 16px;
   background-position: center;
 }
 
-.record__add-service input[type="checkbox"]:checked + label:active::before {
+input[type="checkbox"]:checked + label:active::before {
   background-color: #d5c9bd;
   background-image: none;
 }
@@ -236,6 +256,14 @@
 }
 
 @media (min-width: @tablet-width) {
+  .record {
+    padding-bottom: 0;
+
+    &::after {
+      display: none;
+    }
+  }
+
   .record__wrapper {
     position: relative;
 
