--- a/source/less/blocks/modal-failure.less
+++ b/source/less/blocks/modal-failure.less
@@ -13,6 +13,10 @@
   filter: drop-shadow(0 30px 50px rgba(0,0,0,.75));
 }
 
+.modal-failure--show {
+  display: block;
+}
+
 .modal-failure__wrapper {
   padding: 50px 70px;
 }
@@ -45,6 +49,16 @@
   background-color: #826550;
 
   border: none;
+
+  &:hover {
+    background-color: #6a4d38;
+
+    cursor: pointer;
+  }
+
+  &:active {
+    color: #a09187;
+  }
 }
 
 @media (min-width: @tablet-width) {
