добавил анимацию кнопке

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -3,6 +3,8 @@
 
   border: 1px solid #e5ddd5;
 
+  transition: border .2s linear,background-color .2s linear,color .2s linear;
+
   &:hover {
     border-color: #d5c9bd;
   }
