импортировал файл с чекбоксом

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,6 +12,7 @@
 @import "blocks/record.less";
 @import "blocks/slider.less";
 @import "blocks/button.less";
+@import "blocks/checkbox.less";
 @import "blocks/modal-login.less";
 @import "blocks/modal-failure.less";
 @import "blocks/modal-success.less";
