--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -31,6 +31,8 @@
 
   border: 1px solid #3e3e3e;
 
+  transition: border .2s linear,background-color .2s linear,color .2s linear;
+
   &:hover {
     border-color: #515151;
   }
@@ -70,6 +72,8 @@
   font-size: 0;
 
   border: 1px solid #3f3f3f;
+
+  transition: border .2s linear,background-color .2s linear,color .2s linear;
 
   &:hover {
     border-color: #545454;
@@ -141,6 +145,8 @@
   text-transform: uppercase;
 
   border: 1px solid #3e3e3e;
+
+  transition: border .2s linear,background-color .2s linear,color .2s linear;
 
   &:hover {
     border-color: #515151;
