--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -79,6 +79,8 @@
 .reviews__prev,
 .reviews__next {
   display: none;
+
+  transition: border-color .2s linear,background-color .2s linear;
 }
 
 .slider .reviews__toggles {
