--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -35,6 +35,8 @@
 
   text-transform: uppercase;
   text-decoration: none;
+
+  transition: background-color .2s linear,border-color .2s linear,color .2s linear;
 }
 
 @media (max-width: @mobile-width-only) {
@@ -89,6 +91,17 @@
     background-color: #6a4d38;
 
     z-index: 8;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 2;
+      width: 7px;
+      height: 100%;
+      box-shadow: inset 4px 0 7px -2px rgba(0,0,0,.4);
+    }
   }
 
   .main-navigation--opened .main-navigation__link,
@@ -155,12 +168,30 @@
     }
   }
 
+  .main-navigation--opened .main-navigation__link--active,
+  .main-navigation--closed .main-navigation__link--active {
+
+    cursor: default;
+
+    &:hover {
+      background-color: #826550;
+    }
+
+    &:active {
+      background-color: #826550;
+
+      opacity: 1;
+    }
+  }
+
   .main-navigation--opened .main-navigation__button {
     width: 70px;
     height: 50px;
 
     border: none;
     background-color: #6a4d38;
+
+    transition: background-color .2s linear;
 
     &::before,
     &::after {
@@ -186,6 +217,9 @@
 
   .main-navigation--closed .main-navigation__button,
   .main-navigation--opened .main-navigation__button {
+
+    transition: background-color .2s linear;
+
     &:hover {
       background-color: #624530;
 
