--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -2,6 +2,7 @@
   font-family: "PT Sans Narrow";
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
   src:
     local("PT Sans Narrow"),
     url("../fonts/ptsansnarrow.woff2") format("woff2"),
@@ -12,6 +13,7 @@
   font-family: "PT Sans Narrow";
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
   src:
     local("PT Sans Narrow Bold"),
     url("../fonts/ptsansnarrowbold.woff2") format("woff2"),
